--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "framer-motion": "^11.0.20",
     "jotai": "^2.8.4",
     "jotai-devtools": "^0.10.0",
-    "obs-studio-node": "./static/obs-studio-node-0.3.21-Darwin.tar.gz",
+    "obs-studio-node": "./static/osn-0.15.6-release-win64.tar.gz",
     "obs-websocket-js": "^5.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -62,6 +62,7 @@
     "autoprefixer": "^10.4.19",
     "chalk": "^5.3.0",
     "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
     "electron": "^29.1.5",
     "electron-builder": "^24.13.3",
     "electron-devtools-installer": "^3.2.0",
