--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "async-modal-react": "^2.1.7",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
