--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
+    "@nextui-org/react": "^2.4.5",
     "async-modal-react": "^2.1.7",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
