--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "obs-studio-node": "https://s3-us-west-2.amazonaws.com/obsstudionodes3.streamlabs.com/osn-0.15.6-release-win64.tar.gz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
     "simple-tooltip-react": "^1.1.2",
