--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "async-modal-react": "^2.1.7",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.0.20",
     "jotai": "^2.8.4",
     "jotai-devtools": "^0.10.0",
@@ -59,6 +61,7 @@
     "use-image": "^1.1.1"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
