--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.0.20",
+    "immer": "^10.1.1",
     "jotai": "^2.8.4",
     "jotai-devtools": "^0.10.0",
+    "jotai-immer": "^0.4.1",
     "konva": "^9.3.14",
     "obs-studio-node": "https://s3-us-west-2.amazonaws.com/obsstudionodes3.streamlabs.com/osn-0.15.6-release-win64.tar.gz",
     "react": "^18.2.0",
