--- a/package.json
+++ b/package.json
@@ -59,19 +59,20 @@
     "jotai": "^2.8.4",
     "jotai-devtools": "^0.10.0",
     "jotai-immer": "^0.4.1",
-    "konva": "^9.3.14",
     "obs-studio-node": "https://s3-us-west-2.amazonaws.com/obsstudionodes3.streamlabs.com/osn-0.15.6-release-win64.tar.gz",
+    "pixi.js": "^8.2.6",
+    "pixi.js-legacy": "^7.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
-    "react-konva": "^18.2.10",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
     "simple-tooltip-react": "^1.1.2",
     "tailwind-merge": "^2.4.0",
     "uid": "^2.0.2",
-    "use-image": "^1.1.1"
+    "use-image": "^1.1.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/ffprobe-static": "^2.0.3",
